# emp-agmpc

./: CMakeLists.txt  README.md  install.py
emp-agmpc/: mpc.h
test/: test_in_out.cpp
